--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         #matrix-container {
             position: absolute;
-            top: 100;
-            left: 100;
+            top: 0; /* Change to 0 */
+            left: 0; /* Change to 0 */
             width: 100%;
             height: 100%;
             overflow: hidden;
