--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Matrix Binary Code Effect with Word Formation</title>
     <style>
         body {
-            margin: 0;
+            margin: 0; /* Remove the default margin */
             overflow: hidden;
             background-color: black;
         }
 
         #matrix-container {
             position: absolute;
-            top: 0; /* Change to 0 */
-            left: 0; /* Change to 0 */
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             overflow: hidden;
