--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matrix Binary Code Effect with Word Formation</title>
+    <title>Matrix Binary Code Effect with Glitch and Fade</title>
     <style>
         body {
             margin: 0;
@@ -74,17 +74,21 @@
             matrixContainer.innerHTML = createMatrixText();
         }
 
-        // Function to fade away the matrix effect
-        function fadeMatrix() {
-            matrixContainer.style.opacity = '0';
-            clearInterval(animationInterval);
+        // Function to glitch and fade the matrix
+        function glitchAndFade() {
+            matrixContainer.style.color = 'red'; // Glitch effect (change color to red)
+            setTimeout(() => {
+                matrixContainer.style.color = 'blue'; // Restore the color
+                matrixContainer.style.opacity = '0'; // Fade effect (change opacity to 0)
+                clearInterval(animationInterval);
+            }, 100);
         }
 
         // Start the animation
         const animationInterval = setInterval(updateMatrix, animationSpeed);
 
-        // Add click event listener to fade the matrix on user click
-        document.body.addEventListener('click', fadeMatrix);
+        // Add click event listener to glitch and fade the matrix on user click
+        document.body.addEventListener('click', glitchAndFade);
     </script>
 </body>
 </html>
