--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matrix Binary Code Effect with Glitch, Resize, and Fade</title>
+    <title>Matrix Binary Code Effect with Glitch and Fade</title>
     <style>
-        body {
+        /* Apply CSS to the entire HTML and body to fill the viewport */
+        html, body {
             margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            font-family: 'Courier New', monospace;
             overflow: hidden;
+        }
+
+        body {
             background-color: black;
+            font-size: 20px;
+            color: blue;
         }
 
         #matrix-container {
@@ -18,27 +28,10 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
-            font-family: 'Courier New', monospace;
-            font-size: 20px;
-            color: blue;
-        }
-
-        .matrix-row {
-            display: flex;
-            justify-content: space-between;
         }
 
         .highlighted {
-            color: #FFFFFF; /* Green color for highlighted digits */
-        }
-
-        .glitch {
-            color: white; /* Change color to red during glitch */
-            transform: scale(1.2); /* Enlarge during glitch */
-        }
-
-        .resize {
-            font-size: 24px; /* Increase font size for the resized text */
+            color: #FFFFFF; /* White color for highlighted digits */
         }
     </style>
 </head>
@@ -62,12 +55,11 @@
         function createMatrixRow() {
             let matrixRow = "";
             const wordStartIndex = Math.floor(Math.random() * (matrixWidth - wordToForm.length + 1));
-            const shouldResize = Math.random() < 0.2; // Adjust the probability for resizing
 
             for (let i = 0; i < matrixWidth; i++) {
                 if (i >= wordStartIndex && i < wordStartIndex + wordToForm.length) {
-                    // Glitched characters (red and enlarged)
-                    matrixRow += '<span class="highlighted glitch' + (shouldResize ? ' resize' : '') + '">' + wordToForm[i - wordStartIndex] + '</span>';
+                    // Highlighted characters for forming the word
+                    matrixRow += '<span class="highlighted">' + wordToForm[i - wordStartIndex] + '</span>';
                 } else {
                     matrixRow += getRandomCharacter();
                 }
@@ -79,7 +71,7 @@
         function createMatrixText() {
             let matrixText = "";
             for (let i = 0; i < matrixHeight; i++) {
-                matrixText += '<div class="matrix-row">' + createMatrixRow() + '</div>';
+                matrixText += createMatrixRow() + "<br>";
             }
             return matrixText;
         }
@@ -89,17 +81,21 @@
             matrixContainer.innerHTML = createMatrixText();
         }
 
-        // Function to glitch, resize, and fade the matrix
-        function glitchResizeAndFade() {
-            matrixContainer.style.opacity = '100'; // Fade effect (change opacity to 0)
-            clearInterval(animationInterval);
+        // Function to glitch and fade the matrix
+        function glitchAndFade() {
+            matrixContainer.style.color = 'red'; // Glitch effect (change color to red)
+            setTimeout(() => {
+                matrixContainer.style.color = 'blue'; // Restore the color
+                matrixContainer.style.opacity = '0'; // Fade effect (change opacity to 0)
+                clearInterval(animationInterval);
+            }, 100);
         }
 
         // Start the animation
         const animationInterval = setInterval(updateMatrix, animationSpeed);
 
-        // Add click event listener to glitch, resize, and fade the matrix on user click
-        document.body.addEventListener('click', glitchResizeAndFade);
+        // Add click event listener to glitch and fade the matrix on user click
+        document.body.addEventListener('click', glitchAndFade);
     </script>
 </body>
 </html>
