--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>breaking images</title>
+    <title>Matrix Binary Code Effect with Glitch and Fade</title>
     <style>
         body {
             margin: 0;
@@ -81,6 +81,9 @@
                 matrixContainer.style.color = 'blue'; // Restore the color
                 matrixContainer.style.opacity = '0'; // Fade effect (change opacity to 0)
                 clearInterval(animationInterval);
+
+                // Redirect to another webpage after the animation finishes
+                window.location.href = 'breakingimages.com/main.html'; // Replace 'another.html' with your desired URL
             }, 100);
         }
 
