--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 clearInterval(animationInterval);
 
                 // Redirect to another webpage after the animation finishes
-                window.location.href = 'breakingimages.com/main.html'; // Replace 'another.html' with your desired URL
+                window.location.href = 'main.html'; // Replace 'another.html' with your desired URL
             }, 100);
         }
 
