--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 matrixContainer.style.opacity = '0'; // Fade effect (change opacity to 0)
                 clearInterval(animationInterval);
 
-                // Redirect to another webpage after the animation finishes
-                window.location.href = 'main.html'; // Replace 'another.html' with your desired URL
+                // Redirect to another HTML file on the same domain
+                window.location.href = 'main.html'; // Replace 'another-page.html' with your desired URL
             }, 100);
         }
 
@@ -95,3 +95,4 @@
     </script>
 </body>
 </html>
+
