--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 clearInterval(animationInterval);
 
                 // Redirect to another HTML file on the same domain
-                window.location.href = 'main.html'; // Replace 'another-page.html' with your desired URL
+                window.location.href = '/main.html'; // Replace 'another-page.html' with your desired URL
             }, 100);
         }
 
