--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: lightblue; /* Set the background color to light blue */
+            background-color: black; /* Set the background color to light blue */
             display: flex;
             justify-content: center;
             align-items: center;
