--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         .header {
             width: 50%; /* Adjust the width as needed */
             max-width: 100%; /* Ensure it doesn't exceed the parent container */
-            height: auto; /* Allow the GIF to resize proportionally */
+            height: 50%; /* Allow the GIF to resize proportionally */
             display: inline-block;
             vertical-align: top;
         }
@@ -24,7 +24,7 @@
         .image {
             width: 50%; /* Adjust the width as needed */
             max-width: 100%; /* Ensure it doesn't exceed the parent container */
-            height: auto; /* Allow the PNG to resize proportionally */
+            height: 50%; /* Allow the PNG to resize proportionally */
             display: inline-block;
             vertical-align: top;
         }
