--- a/main.html
+++ b/main.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resizable Header and Image</title>
+    <title>Resizable Header, Image, and YouTube Players</title>
     <style>
         body {
-            margin: 10;
+            margin: 0;
             padding: 0;
             background-color: black; /* Set the background color to black */
             font-family: Arial, sans-serif;
@@ -31,15 +31,71 @@
             max-width: 100%; /* Ensure it doesn't exceed the parent container */
             height: auto; /* Allow the PNG to resize proportionally */
         }
+
+        .youtube-container {
+            width: 70%; /* Adjust the width as needed */
+            max-width: 100%; /* Ensure it doesn't exceed the parent container */
+            height: 0;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio for YouTube videos */
+            position: relative;
+            margin-top: 20px; /* Add some margin to separate from the header and image */
+        }
+
+        .youtube-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Left and Right GIFs */
+        .left-gif, .right-gif {
+            width: 15%; /* Adjust the width as needed */
+            max-width: 100%; /* Ensure it doesn't exceed the parent container */
+            height: auto; /* Allow the GIFs to resize proportionally */
+            position: fixed;
+            z-index: -1; /* Place them behind other content */
+        }
+
+        .left-gif {
+            left: -1%;
+            bottom: 40%;
+        }
+
+        .right-gif {
+            right: -1%;
+            bottom: 40%;
+        }
     </style>
 </head>
 <body>
+    <!-- Left GIF -->
+    <img src="https://s10.gifyu.com/images/S4Vhc.gif" alt="Left GIF" class="left-gif">
+
+    <!-- Right GIF -->
+    <img src="https://s10.gifyu.com/images/S4Vhc.gif" alt="Right GIF" class="right-gif">
+
     <div class="container">
         <!-- Header GIF (replace 'header.gif' with your actual GIF file) -->
         <img src="https://media3.giphy.com/media/qtMUc6sViWwsRwJi69/giphy.gif" alt="Header GIF" class="header">
 
         <!-- PNG Image (replace 'image.png' with your actual PNG file) -->
         <img src="https://i.imgur.com/5NY9fKQ.png" alt="Resizable PNG Image" class="image">
+    </div>
+
+    <!-- YouTube Player 1 -->
+    <div class="container">
+        <div class="youtube-container">
+            <iframe src="https://www.youtube.com/embed/dKlpKE7x7mY" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <!-- YouTube Player 2 -->
+    <div class="container">
+        <div class="youtube-container">
+            <iframe src="https://www.youtube.com/embed/omOCwJyG9Bg?si=3zyMRDFaJZNlQmCX" frameborder="0" allowfullscreen></iframe>
+        </div>
     </div>
 </body>
 </html>
