--- a/main.html
+++ b/main.html
@@ -77,19 +77,20 @@
         }
 
         .png-image-1 {
-            width: 56%; /* Adjust the width for PNG 1 */
+            width: 60%; /* Adjust the width for PNG 1 */
             max-width: 100%;
-            height: auto;
+            height: 100%;
+            margin: 0 auto; /* Center the image */
         }
 
         .png-image-2 {
-            width: 100%; /* Adjust the width for PNG 2 */
-            max-width: 100%;
+            width: 110%; /* Adjust the width for PNG 2 */
+            max-width: 200%;
             height: auto;
         }
 
         .png-image-3 {
-            width: 120%; /* Adjust the width for PNG 3 */
+            width: 105%; /* Adjust the width for PNG 3 */
             max-width: 200%;
             height: 100%;
         }
