--- a/main.html
+++ b/main.html
@@ -112,6 +112,7 @@
         .footer-links {
             display: flex;
             align-items: center;
+            font-size: 30px;
         }
 
         .footer-link {
@@ -125,8 +126,9 @@
             align-items: center;
         }
 
+        /* Make the footer GIFs twice as large */
         .footer-gif {
-            width: 50px; /* Adjust the width as needed */
+            width: 100px;
             height: auto;
             margin-right: 10px; /* Add spacing between GIFs */
         }
