--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resizable Header, Image, and YouTube Players</title>
+    <title>breaking images</title>
     <style>
         body {
             margin: 0;
