--- a/main.html
+++ b/main.html
@@ -135,6 +135,7 @@
     </style>
 </head>
 <body>
+    <iframe src="cursor.html" width="100%" height="500"></iframe>
     <!-- Left GIF -->
     <img src="https://s10.gifyu.com/images/S4Vhc.gif" alt="Left GIF" class="left-gif">
 
