--- a/main.html
+++ b/main.html
@@ -84,7 +84,7 @@
         .footer {
             background-color: #000000;
             color: white;
-            padding: 150px;
+            padding: 20px;
             text-align: center;
             display: flex;
             justify-content: space-between;
@@ -108,7 +108,7 @@
             position: absolute;
             width: 20px;
             height: 20px;
-            background: url('https://i.imgur.com/NEu5L6O.png'); /* Replace with your particle image URL */
+            background: url('https://i.imgur.com/q9bC16B.png'); /* Replace with your particle image URL */
             background-size: cover;
             pointer-events: none;
             animation: particleAnimation 1s ease-out forwards;
@@ -130,7 +130,7 @@
             position: absolute;
             width: 20px;
             height: 20px;
-            background: url('https://i.imgur.com/NEu5L6O.png'); /* Replace with your custom cursor GIF URL */
+            background: url('https://your-cursor-image.gif'); /* Replace with your custom cursor GIF URL */
             background-size: cover;
             pointer-events: none;
             z-index: 9999; /* Ensure it's above other elements */
